--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "firebase-tools": "^10.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-player": "^2.10.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.29.0",
+    "react-video-js-player": "^1.1.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
